@@ -1,3 +1,8 @@
+2008-06-19  Jens Lautenbacher  <jtl@schlund.de>
+
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java (runPageFlow): don't use
+	stopatnextaftercurrentpage twice instead of stopatcurrentpage... bummer.
+
 2008-06-12  Martin Leidig  <mleidig@schlund.de>
 
 	Moved webservice unittest into webservice modules.
